--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,11 +49,12 @@
         </header>
         <main id="busdirectory">
             <h4>Green'Fingers Directory</h4>
-            <div class="dirbuttons">
-                <button id="grid-view"><img src="images/grid.png" alt="icon for grid view"></button>
-                <button id="list-view"><img src="images/list.png" alt="icon for list view"></button>
+            <div>
+                <button id="grid-view" class="listview"><img src="images/grid.png" alt="icon for grid view"></button>
+                <button id="list-view" class="gridview"><img src="images/list.png" alt="icon for list view"></button>
             </div>
             <div class="business-cards"> </div>
+            <div class="business-lists"> </div>
         </main>
         <footer>
             <div class="address-contact">
