--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,15 +86,7 @@
                 <p>Want to access the chamber's benefits? Join us now.</p>
                 <a href="join.html"><img src="images/join.jpg" alt="image to access the join page"></a>
             </div>
-            <div class="spotlights">  
-                <div id="spot1">
-                    <img src="images/agrivet.jpg">
-                </div>             
-                <div id="spot2">
-                    <img src="images/care.jpg">
-                </div>
-                <div id="spot3"><img src="images/avsf.jpg"></div>
-            </div>
+            <div class="spotlights"> </div>
         </main>
         <footer>
             <div class="address-contact">
