list directory: still in work. Not fully down

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -49,7 +49,7 @@
         </header>
         <main id="busdirectory">
             <h4>Green'Fingers Directory</h4>
-            <div>
+            <div class="btnView">
                 <button id="grid-view" class="listview"><img src="images/grid.png" alt="icon for grid view"></button>
                 <button id="list-view" class="gridview"><img src="images/list.png" alt="icon for list view"></button>
             </div>
