--- a/temples-inn-suites/services.html
+++ b/temples-inn-suites/services.html
@@ -32,10 +32,10 @@
                     <nav> 
                         <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
                         <ul id="primaryNav">
-                            <li class="active"><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="temples.html">Temples</a></li>
                             <li><a href="reservations.html">Reservations</a></li>
-                            <li><a href="services.html">Services</a></li>
+                            <li class="active"><a href="services.html">Services</a></li>
                         </ul>
                     </nav>
                     <div class="social">
@@ -59,9 +59,9 @@
             <div id="about-us">
                 <h2>About Us</h2>
                 <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
-                We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet their needs. 
+                We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet the needs of those patrons. 
                 The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
-                Whether you are here to plan your wedding or to look for an affordable place to stay during your works at the temple, 
+                Whether you are here to plan your wedding or to look for an affordable place to stay during your mission at the temple, 
                 we are here for you, and we have different options that could perfectly meet your needs. </p>
             </div>
             <section class="smallview">
@@ -85,11 +85,6 @@
                     <p>Temple Inn & Suites Headquarter</p>
                     <p>4810 Montgomery Ln #300, Bethesda, MD 20814</p><hr>
                     <p>phone number: <br>+1 300-555-0660</p>
-                </div>
-                <div id="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!
-                2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" 
-                width="300" height="230" style="border: 1px solid black; border-radius:5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
             <section class="temple">
