update on temple inn and suites

--- a/temples-inn-suites/references.html
+++ b/temples-inn-suites/references.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD230: Home Page for Temple Inn and Suites">
+        <meta name="description" content="References used on the website of Temple Inn and Suites">
         <title>Temple Inn and Suites Home Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -92,6 +92,7 @@
                 <p>Images resize: <a href="https://pixlr.com/e/#editor">pixlr.com/e/#editor</a></p>
                 <p>Icons: <a href="https://www.flaticon.com/free-icons/">www.flaticon.com/free-icons/</a></p>
                 <p>Weather API: <a href="https://openweathermap.org/api">openweathermap.org/api</a></p>
+                <p>Wireframes: <a href="https://wireframe.cc/">wireframe.cc/</a></p>
                 
                 
             </section>
