--- a/temples-inn-suites/services.html
+++ b/temples-inn-suites/services.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD230: Home Page for Temple Inn and Suites">
+        <meta name="description" content="WDD230: Home Page for Services offer at Temple Inn and Suites">
         <title>Temple Inn and Suites Home Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
     </head>
-    <body>
+    <body id="servicesection">
         <header>
             <div class="heading">
                 <section id = "heading-name">
@@ -57,11 +57,12 @@
                 </picture>
             </div>
             <div id="about-us">
-                <h2>About Us</h2>
+                <h2>Our Services</h2>
                 <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
                 We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet the needs of those patrons. 
                 The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
-                Whether you are here to plan your wedding or to look for an affordable place to stay during your mission at the temple, 
+                Whether you are here to look for an appropriate place to stay for few days, to <a href="reception.html">plan your wedding </a>
+                or to look for an affordable place to live during your mission at the temple as a <a href="missionary.html">full time temple missionary</a>, 
                 we are here for you, and we have different options that could perfectly meet your needs. </p>
             </div>
             <section class="smallview">
@@ -71,7 +72,6 @@
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
                         <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
                         <hr>
-                    
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
                     </div>
@@ -87,49 +87,41 @@
                     <p>phone number: <br>+1 300-555-0660</p>
                 </div>
             </section>
-            <section class="temple">
-                <div id="temple1">
-                    <img src="images/placeholder.jpg" data-src="images/durban-temple.jpg" alt="Temple of Durban - South Africa" loading="lazy">
-                    <h2>Durban Temple</h2>
-                    <p id="text1">The temple was announced by President Thomas S. Monson on October 1, 2011. Elder Carl B. Cook, 
-                        then President of the Africa Southeast Area, presided over the groundbreaking ceremony on April 9, 2016.
-                        The Durban South Africa Temple was dedicated on Sunday, February 16, 2020. 
-                        The temple is located atop a grassy knoll about 12 miles north of the Durban city center.</p>
-                    <p id="address1">2 Izinga Drive, Izinga Ridge 4021, Umhlanga, KwaZulu-Natal, South Africa</p>
-                    <br>
-                    <div id="details1">
-                        <h3>Services</h3>
-                        <p>No clothing rental available</p>
-                        <p>No cafeteria available</p>
-                        <p>No patron housing available</p>
-                        <p>Distribution center nearby</p>
-                        <p>Telephone: (27) 31-140-0240</p>
-                    </div>
+            <section class="services">
+                <h3 id="images-gal"Gallery></h3>
+                <div id="services-img">
+                    <img id="std" src="images/standard-room.jpg" alt="standard room temple inn and suites">
+                    <img id="bkfst" src="images/breakfast.jpg" alt="free breakfast temple inn and suites">
+                    <img id="fml" src="images/familyroom.jpg" alt="family room temple inn and suites">
+                    <img id="ftn" src="images/fitness.jpg" alt="fitness center temple inn and suites">
+                    <img id="pbl" src="images/publicarea.jpg" alt="public area temple inn and suites">
+                    <img id="pool" src="images/indoor-pool.jpg" alt="indoor pool temple inn and suites">
+                    <img id="kid" src="images/nursery.jpg" alt="nursery room temple inn and suites">
+                    <img id="stl" src="images/temple-shuttle.jpg" alt="shutle temple inn and suites">
+                    <img id="prk" src="images/parking.jpg" alt="parking temple inn and suites">
+                 </div>
+                <div id="text1">
+                    <h3 id="spl"></h3>Specialized Services</h3>
+                    <ul>
+                        <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes/li>
+                        <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
+                        <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
+                        <li>Temple history themed reception and sitting area</li>
+                        <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
+                        <li>A family search center that supports family search and ordinance work</li>
+                    </ul>
                 </div>
-                <div id="temple2">
-                    <img src="images/placeholder.jpg" data-src="images/johannesburg-temple.jpg" alt="Temple of Johannesburg - South Africa">
-                    <h2>Johannesburg Temple</h2>
-                    <p id="text2">Plans to construct the temple were announced 1 April 1981, Church leaders broke ground 27 November 1982, and President Gordon B. Hinckley, 
-                        then a counselor in the First Presidency of The Church of Jesus Christ of Latter-day Saints, 
-                        dedicated the Johannesburg South Africa Temple 24 August 1985. 
-                        The temple serves Latter-day Saints in southern Africa. </p>
-                    <p id="address2">7 Jubilee Road, Parktown, Johannesburg 2193, South Africa</p>
-                    <br>
-                    <div id="details2">
-                        <h3>Services</h3>
-                        <p>Clothing rental available</p>
-                        <p>No cafeteria available</p>
-                        <p>No patron housing available</p>
-                        <p>Distribution center nearby</p>
-                        <p>Telephone: (27) 11-645-1540</p>
-                        
-                    </div>
-                </div>
-                <div id="information">
-                    <h3>Additionnal Information</h3>
-                    <p>Ordinances for family names must be done in proper sequence—baptism, confirmation, Melchizedek Priesthood ordination (males), initiatory, endowment, and then sealing. 
-                        Please allow sufficient time to perform all the ordinances you wish to complete during your visit. 
-                        For additional help and information, please call the temple.</p>
+                <div id="text2">
+                    <h4 id="spl"></h3>Free Amenities</h3>
+                    <ul>
+                        <li>Breakfast</li>
+                        <li>Exercise/workout room</li>
+                        <li>Indoor pool</li>
+                        <li>WiFi high-speed internet access and smart TVs</li>
+                        <li>Parking</li>
+                        <li>Temple shuttle</li>
+                        <li>Family history consultation and family ordinance card service</li>
+                    </ul>
                 </div>
             </section>
         </main>
