--- a/temples-inn-suites/reservations.html
+++ b/temples-inn-suites/reservations.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="WDD230: Home Page for Temple Inn and Suites">
+        <meta name="description" content="Booking and reservation page for Temple Inn and Suites">
         <title>Temple Inn and Suites Home Page</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
