--- a/temples-inn-suites/missionary.html
+++ b/temples-inn-suites/missionary.html
@@ -57,7 +57,7 @@
                 </picture>
             </div>
             <div id="about-us">
-                <h2>About Us</h2>
+                <h2>Our Full-time Missionary Services</h2>
                 <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
                 We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet their needs. 
                 The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
@@ -67,7 +67,7 @@
             <div id="missionary-img">
                 <img id="std" src="images/kitchenette.jpg" alt="temple wedding temple inn and suites">
                 <img id="bkfst" src="images/senior-missionaries.jpg" alt="couple suite temple inn and suites">
-                <img id="fml" src="images/wed-reception.jpg" alt="wedding reception temple inn and suites">
+                <img id="fml" src="images/room-longstay.jpg" alt="wedding reception temple inn and suites">
              </div>
              <div id="contact-sect">
                 <section class="contact-form">
