--- a/temples-inn-suites/reception.html
+++ b/temples-inn-suites/reception.html
@@ -56,7 +56,7 @@
                 </picture>
             </div>
             <div id="about-us">
-                <h2>About Us</h2>
+                <h2>Wedding Reception Services</h2>
                 <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
                 We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet their needs. 
                 The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
