update on services page

--- a/temples-inn-suites/missionary.html
+++ b/temples-inn-suites/missionary.html
@@ -58,11 +58,9 @@
             </div>
             <div id="about-us">
                 <h2>Our Full-time Missionary Services</h2>
-                <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
-                We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet their needs. 
-                The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
-                Whether you are here to plan your wedding or to look for an affordable place to stay during your works at the temple, 
-                we are here for you, and we have different options that could perfectly meet your needs. </p>
+                <p id="about">Temple Inn & Suites offers specialized services for full-time senior missionaries. 
+                    To help you focus on your temple works, we ensure that our accommodations meets your needs. 
+                    Contact us for more information.. </p>
             </div>
             <div id="missionary-img">
                 <img id="std" src="images/kitchenette.jpg" alt="temple wedding temple inn and suites">
