--- a/temples-inn-suites/services.html
+++ b/temples-inn-suites/services.html
@@ -88,31 +88,29 @@
                 </div>
             </section>
             <section class="services">
-                <h3 id="images-gal"Gallery></h3>
-                <div id="services-img">
-                    <img id="std" src="images/standard-room.jpg" alt="standard room temple inn and suites">
-                    <img id="bkfst" src="images/breakfast.jpg" alt="free breakfast temple inn and suites">
-                    <img id="fml" src="images/familyroom.jpg" alt="family room temple inn and suites">
-                    <img id="ftn" src="images/fitness.jpg" alt="fitness center temple inn and suites">
-                    <img id="pbl" src="images/publicarea.jpg" alt="public area temple inn and suites">
-                    <img id="pool" src="images/indoor-pool.jpg" alt="indoor pool temple inn and suites">
-                    <img id="kid" src="images/nursery.jpg" alt="nursery room temple inn and suites">
-                    <img id="stl" src="images/temple-shuttle.jpg" alt="shutle temple inn and suites">
-                    <img id="prk" src="images/parking.jpg" alt="parking temple inn and suites">
-                 </div>
                 <div id="text1">
-                    <h3 id="spl"></h3>Specialized Services</h3>
+                    <h3 id="spl">Specialized Services</h3>
                     <ul>
-                        <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes/li>
+                        <li>Free access to changing rooms and bathroom facilities for temple patrons who have traveled far and need to change to and from church clothes</li>
                         <li>A playroom and low-cost, short-term babysitting services for the children of patrons</li>
                         <li>Long-term stay accommodations in kitchenette suites for full-time temple missionaries</li>
                         <li>Temple history themed reception and sitting area</li>
                         <li>A wedding reception hall that can be easily customized with a simple catering menu and kitchen access for food preparation and serving</li>
                         <li>A family search center that supports family search and ordinance work</li>
                     </ul>
+                    <div id="img-text1">
+                        <img id="fml" src="images/familyroom.jpg" alt="family room temple inn and suites">
+                        <img id="ftn" src="images/fitness.jpg" alt="fitness center temple inn and suites">
+                        <img id="pool" src="images/indoor-pool.jpg" alt="indoor pool temple inn and suites">
+                    </div>
                 </div>
+                <div id="services-img">
+                    <img id="std" src="images/standard-room.jpg" alt="standard room temple inn and suites">
+                    <img id="kid" src="images/nursery.jpg" alt="nursery room temple inn and suites">
+                    <img id="prk" src="images/parking.jpg" alt="parking temple inn and suites">
+                 </div>
                 <div id="text2">
-                    <h4 id="spl"></h3>Free Amenities</h3>
+                    <h3 id="spl">Free Amenities</h3>
                     <ul>
                         <li>Breakfast</li>
                         <li>Exercise/workout room</li>
@@ -122,6 +120,11 @@
                         <li>Temple shuttle</li>
                         <li>Family history consultation and family ordinance card service</li>
                     </ul>
+                    <div id="img-text2">
+                        <img id="bkfst" src="images/breakfast.jpg" alt="free breakfast temple inn and suites">
+                        <img id="stl" src="images/temple-shuttle.jpg" alt="shutle temple inn and suites">
+                        <img id="pbl" src="images/publicarea.jpg" alt="public area temple inn and suites">
+                    </div>
                 </div>
             </section>
         </main>
