more update, almost done

--- a/temples-inn-suites/reception.html
+++ b/temples-inn-suites/reception.html
@@ -57,16 +57,14 @@
             </div>
             <div id="about-us">
                 <h2>Wedding Reception Services</h2>
-                <p id="about">Temple Inn & Suites is a hotel chain headquartered in Bethesda, MD that builds and manages specialized hotel accommodations near temple locations of The Church of Jesus Christ of Latter-day Saints around the world. 
-                We offer catering services to temple workers, patrons, and their families by providing specialized services and accommodations that meet their needs. 
-                The hotel accommodations and services are available to anyone willing to abide by the terms and policies outlined by the company. 
-                Whether you are here to plan your wedding or to look for an affordable place to stay during your works at the temple, 
-                we are here for you, and we have different options that could perfectly meet your needs. </p>
+                <p id="about">Temple Inn & Suites offers specialized services for your wedding. 
+                    From catering services to special suite, we have several package options, 
+                    as well as customized offers that will perfectly meet your needs for a stress free celebration. </p>
             </div>
-            <div id="services-img">
-                <img id="std" src="images/couple.jpg" alt="temple wedding temple inn and suites">
-                <img id="bkfst" src="images/suites.jpg" alt="couple suite temple inn and suites">
-                <img id="fml" src="images/wed-reception.jpg" alt="wedding reception temple inn and suites">
+            <div id="reception-img">
+                <img id="cpl" src="images/couple.jpg" alt="temple wedding temple inn and suites">
+                <img id="suite" src="images/suites.jpg" alt="couple suite temple inn and suites">
+                <img id="recpt" src="images/wed-reception.jpg" alt="wedding reception temple inn and suites">
              </div>
              <div id="contact-sect">
                 <section class="contact-form">
