--- a/temples-inn-suites/reception.html
+++ b/temples-inn-suites/reception.html
@@ -59,7 +59,7 @@
                 <h2>Wedding Reception Services</h2>
                 <p id="about">Temple Inn & Suites offers specialized services for your wedding. 
                     From catering services to special suite, we have several package options, 
-                    as well as customized offers that will perfectly meet your needs for a stress free celebration. </p>
+                    as well as customized offers that will perfectly meet your needs for a stress free celebration. <br> Contact us for more information. </p>
             </div>
             <div id="reception-img">
                 <img id="cpl" src="images/couple.jpg" alt="temple wedding temple inn and suites">
