--- a/temples-inn-suites/contact.html
+++ b/temples-inn-suites/contact.html
@@ -41,7 +41,7 @@
                     <div class="social">
                         <a id="fb" href="https://facebook.com/"><img src="./images/facebook.jpg" alt="facebook logo"></a>
                         <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.jpg" alt="Linkedin logo"></a>
-                        <a id="in" href="https://twitter.com/"><img src="./images/twitter.jpg" alt="twitter logo"></a>
+                        <a id="tw" href="https://twitter.com/"><img src="./images/twitter.jpg" alt="twitter logo"></a>
                     </div>
                 </section> 
             </div>
