--- a/temples-inn-suites/index.html
+++ b/temples-inn-suites/index.html
@@ -17,7 +17,7 @@
         <link rel="stylesheet" href="css/medium.css">
         <link rel="stylesheet" href="css/large.css">
     </head>
-    <body>
+    <body id="mainsection">
         <header>
             <div class="heading">
                 <section id = "heading-name">
@@ -41,7 +41,7 @@
                     <div class="social">
                         <a id="fb" href="https://facebook.com/"><img src="./images/facebook.jpg" alt="facebook logo"></a>
                         <a id="in" href="https://linkedin.com/"><img src="./images/linkedin.jpg" alt="Linkedin logo"></a>
-                        <a id="in" href="https://twitter.com/"><img src="./images/twitter.jpg" alt="twitter logo"></a>
+                        <a id="tw" href="https://twitter.com/"><img src="./images/twitter.jpg" alt="twitter logo"></a>
                     </div>
                 </section> 
             </div>
@@ -71,7 +71,6 @@
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
                         <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
                         <hr>
-                    
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
                     </div>
@@ -87,9 +86,7 @@
                     <p>phone number: <br>+1 300-555-0660</p>
                 </div>
                 <div id="map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!
-                2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" 
-                width="300" height="230" style="border: 1px solid black; border-radius:5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" width="300" height="230" style="border: 1px solid black; border-radius:5px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </section>
             <section class="temple">
