--- a/temples-inn-suites/css/references.html
+++ b/temples-inn-suites/css/references.html
@@ -59,7 +59,7 @@
             <section class="smallview">
                 <div id="weather">
                     <h2>Weather Forecast</h2>
-                    <div class="wea"></div>
+                    <div class="wea">
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
                         <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
                         <hr>
