--- a/temples-inn-suites/reservations.html
+++ b/temples-inn-suites/reservations.html
@@ -58,19 +58,16 @@
             <section  id="res" class="smallview">
                 <div id="weather">
                     <h2>Weather Forecast</h2>
-                    <div class="wea"></div>
+                    <div class="wea">
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
                         <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
                         <hr>
-                    
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
                     </div>
                 </div>
                 <div id="booking">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77
-                    .09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef
-                    !2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <div id="contact">
                     <h2>Address & Phone</h2>
