more errors to fix

--- a/temples-inn-suites/reservations.html
+++ b/temples-inn-suites/reservations.html
@@ -60,7 +60,7 @@
                     <h2>Weather Forecast</h2>
                     <div class="wea">
                         <p>Current Temperature: <span id="current-temp"></span>&deg;C</p>
-                        <span id="icon-src"></span><figure><img src="" alt="" id="weathericon" /><figcaption></figcaption></figure>      
+                        <span id="icon-src"></span><figure><img src=" " alt=" " id="weathericon"><figcaption></figcaption></figure>      
                         <hr>
                         <p>Wind Speed: <span id="speed">15</span> km/h</p>
                         <p>Humidity: <span id="humidity"></span></p>
@@ -87,8 +87,8 @@
                         <label class="field">Last Name* <input type="text" name="lname" placeholder="Last Name" required></label>
                         <label class="field">Email Address* <input type="email" name="email" placeholder="user@email.org" required></label>
                         <label class="field">Phone Number*<input type="tel" name="phone" placeholder="xxx xx xxx xx" pattern="^[0-9\+\s]{10,17}$" required></label>
-                        <label class="field">Address <input type="text" name="address" placeholder = "" pattern="^[A-zÀ-ž\s\-0-9]{3,}$"></label>
-                        <lablel class="field">City <input type="text" name="city" placeholder=""></label>
+                        <label class="field">Address <input type="text" name="address" placeholder = " " pattern="^[A-zÀ-ž\s\-0-9]{3,}$"></label>
+                        <lablel class="field">City <input type="text" name="city" placeholder=" "></label>
                         <label class="field">State/Country<input type="text" name="state" placeholder=""></label>
                     </fieldset>
                     <fieldset id="room">
@@ -96,7 +96,7 @@
                         <div class="sbs">
                             <label class="location-select" for="locationselect">Location:</label>
                             <select id="locationselect" name="locationselect">
-                                <option value=""disabled selected>--Please choose a location--</option>
+                                <option value="disabled selected">--Please choose a location--</option>
                                 <option value="durban">Durban - South Africa</option>
                                 <option value="joburg">Johannesburg - South Africa </option>
                                 <option value="accra">Accra - Ghana</option>
