--- a/temples-inn-suites/temples.html
+++ b/temples-inn-suites/temples.html
@@ -62,9 +62,7 @@
             <div id="templeinfo">
                 <img src="./images/templeinnandsuites-logo.webp" alt="logo of Temple Inne and Suites">
                 <p>Temple Inn & Suites Headquarter,<br>4810 Montgomery Ln #300, Bethesda, MD 20814</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!
-                2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg" 
-                width="200" height="150" style="border: 2px solid black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.409032436698!2d-77.09900308464708!3d38.983160179557444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b7c97c9d6d973d%3A0x42c7ba977f6144ef!2s4810%20Montgomery%20Ln%20%23300%2C%20Bethesda%2C%20MD%2020814%2C%20USA!5e0!3m2!1sen!2smg!4v1649165260489!5m2!1sen!2smg"width="200" height="150" style="border: 2px solid black;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <a id="maplink" href="https://goo.gl/maps/UdJdbjYM8ZjndMab9"><img src="https://img.icons8.com/color/30/000000/worldwide-location.png" alt="map location icon"></a>
             </div>
             <div id="author">
